--- a/_modules/meep_adjoint.html
+++ b/_modules/meep_adjoint.html
@@ -36,6 +36,7 @@
   <link rel="stylesheet" href="../_static/css/theme.css" type="text/css" />
   <link rel="stylesheet" href="../_static/pygments.css" type="text/css" />
   <link rel="stylesheet" href="../_static/custom.css" type="text/css" />
+  <link rel="stylesheet" href="../_static/theme_overrides.css" type="text/css" />
     <link rel="index" title="Index" href="../genindex.html" />
     <link rel="search" title="Search" href="../search.html" /> 
 </head>
@@ -210,6 +211,8 @@
                                     <span class="n">set_visualization_option_defaults</span><span class="p">)</span>
 
 <span class="kn">from</span> <span class="nn">.visualization</span> <span class="k">import</span> <span class="n">visualize_sim</span>
+
+<span class="kn">from</span> <span class="nn">.console_manager</span> <span class="k">import</span> <span class="n">ConsoleManager</span><span class="p">,</span> <span class="n">termsty</span>
 
 <span class="kn">from</span> <span class="nn">.optimization_problem</span> <span class="k">import</span> <span class="n">OptimizationProblem</span>
 
