--- a/genindex.html
+++ b/genindex.html
@@ -37,6 +37,7 @@
   <link rel="stylesheet" href="_static/css/theme.css" type="text/css" />
   <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
   <link rel="stylesheet" href="_static/custom.css" type="text/css" />
+  <link rel="stylesheet" href="_static/theme_overrides.css" type="text/css" />
     <link rel="index" title="Index" href="#" />
     <link rel="search" title="Search" href="search.html" /> 
 </head>
@@ -207,6 +208,8 @@
 </li>
       <li><a href="meep_adjoint/docs/tutorial/index.html#term-3-design-region-informing-meep-adjoint-where-it-is-allowed-to-vary-the-permittivity"><strong>3. design_region: Informing `meep_adjoint` where it is allowed to vary the permittivity</strong></a>, <a href="tutorial/index.html#term-3-design-region-informing-meep-adjoint-where-it-is-allowed-to-vary-the-permittivity"><strong>[1]</strong></a>
 </li>
+      <li><a href="tutorial/index.html#term-4-extra-regions-additional-subregions-not-covered-by-the-above"><strong>4. extra_regions: Additional subregions not covered by the above</strong></a>
+</li>
   </ul></td>
 </tr></table>
 
@@ -242,6 +245,8 @@
       <li><a href="API/LowLevel.html#meep_adjoint.DFTCell.get_EH_slices">get_EH_slices() (DFTCell method)</a>, <a href="meep_adjoint/docs/API/LowLevel.html#meep_adjoint.DFTCell.get_EH_slices">[1]</a>
 </li>
       <li><a href="API/LowLevel.html#meep_adjoint.DFTCell.get_eigenmode_slices">get_eigenmode_slices() (DFTCell method)</a>, <a href="meep_adjoint/docs/API/LowLevel.html#meep_adjoint.DFTCell.get_eigenmode_slices">[1]</a>
+</li>
+      <li><a href="API/HighLevel.html#meep_adjoint.OptimizationProblem.get_fdf_funcs">get_fdf_funcs() (OptimizationProblem method)</a>
 </li>
       <li><a href="API/HighLevel.html#meep_adjoint.get_visualization_option">get_visualization_option() (in module meep_adjoint)</a>
 </li>
