--- a/_modules/meep_adjoint/visualization_options.html
+++ b/_modules/meep_adjoint/visualization_options.html
@@ -36,6 +36,7 @@
   <link rel="stylesheet" href="../../_static/css/theme.css" type="text/css" />
   <link rel="stylesheet" href="../../_static/pygments.css" type="text/css" />
   <link rel="stylesheet" href="../../_static/custom.css" type="text/css" />
+  <link rel="stylesheet" href="../../_static/theme_overrides.css" type="text/css" />
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" /> 
 </head>
@@ -197,13 +198,13 @@
     <span class="k">def</span> <span class="nf">_sectopts</span><span class="p">(</span><span class="n">s</span><span class="p">):</span> <span class="k">return</span> <span class="n">_init_section_options</span><span class="p">(</span><span class="n">s</span><span class="p">,</span> <span class="n">custom_defaults</span><span class="p">,</span> <span class="n">search_env</span><span class="p">)</span>
 
     <span class="k">global</span> <span class="n">_visualization_sections</span>
-    <span class="n">_visualization_sections</span> <span class="o">=</span> <span class="p">{</span> <span class="n">s</span> <span class="p">:</span> <span class="n">_sectopts</span><span class="p">(</span><span class="n">s</span><span class="p">)</span> <span class="k">for</span> <span class="n">s</span> <span class="ow">in</span> <span class="n">VISUALIZATION_SECTIONS</span> <span class="p">}</span>
+    <span class="n">_visualization_sections</span> <span class="o">=</span> <span class="p">{</span> <span class="n">s</span> <span class="p">:</span> <span class="n">_sectopts</span><span class="p">(</span><span class="n">s</span><span class="p">)</span> <span class="k">for</span> <span class="n">s</span> <span class="ow">in</span> <span class="n">section_names</span> <span class="p">}</span>
 
 
 <span class="k">def</span> <span class="nf">_init_section_options</span><span class="p">(</span><span class="n">section</span><span class="p">,</span> <span class="n">custom_defaults</span><span class="p">,</span> <span class="n">search_env</span><span class="p">):</span>
-    <span class="n">custom_section_defaults</span> <span class="o">=</span> <span class="nb">dict</span><span class="p">(</span> <span class="n">VISUALIZATION_SECTIONS</span><span class="o">.</span><span class="n">get</span><span class="p">(</span><span class="n">section</span><span class="p">,{})</span> <span class="p">)</span>
+    <span class="n">custom_section_defaults</span> <span class="o">=</span> <span class="nb">dict</span><span class="p">(</span> <span class="n">section_defaults</span><span class="o">.</span><span class="n">get</span><span class="p">(</span><span class="n">section</span><span class="p">,{})</span> <span class="p">)</span>
     <span class="n">custom_section_defaults</span><span class="o">.</span><span class="n">update</span><span class="p">(</span><span class="n">_subdict</span><span class="p">(</span><span class="n">custom_defaults</span><span class="p">,</span><span class="n">section</span><span class="p">))</span>
-    <span class="k">return</span> <span class="n">OptionAlmanac</span><span class="p">(</span><span class="n">VISUALIZATION_OPTION_TEMPLATES</span><span class="p">,</span>
+    <span class="k">return</span> <span class="n">OptionAlmanac</span><span class="p">(</span><span class="n">sectioned_templates</span><span class="p">,</span>
                          <span class="n">custom_defaults</span><span class="o">=</span><span class="n">custom_section_defaults</span><span class="p">,</span>
                          <span class="n">section</span><span class="o">=</span><span class="n">section</span><span class="p">,</span> <span class="n">filename</span><span class="o">=</span><span class="n">RCFILE</span><span class="p">,</span> <span class="n">search_env</span><span class="o">=</span><span class="n">search_env</span><span class="p">,</span>
                          <span class="n">prepend_section</span> <span class="o">=</span> <span class="p">(</span><span class="n">section</span> <span class="o">!=</span> <span class="s1">&#39;default&#39;</span><span class="p">))</span>
@@ -253,8 +254,8 @@
         <span class="n">warn</span><span class="p">(</span><span class="s1">&#39;unknown options section </span><span class="si">{}</span><span class="s1"> (skipping)&#39;</span><span class="o">.</span><span class="n">format</span><span class="p">(</span><span class="n">section</span><span class="p">))</span>
         <span class="k">return</span> <span class="kc">None</span>
 
-    <span class="k">for</span> <span class="n">opt</span> <span class="ow">in</span> <span class="p">[</span><span class="n">o</span><span class="o">.</span><span class="n">lower</span><span class="p">()</span> <span class="k">for</span> <span class="n">o</span> <span class="ow">in</span> <span class="n">opts</span> <span class="k">if</span> <span class="n">o</span><span class="o">.</span><span class="n">lower</span><span class="p">()</span> <span class="ow">not</span> <span class="ow">in</span> <span class="n">VISUALIZATION_OPTIONS</span><span class="p">]:</span>
-        <span class="k">if</span> <span class="n">np</span><span class="o">.</span><span class="n">any</span><span class="p">(</span> <span class="p">[</span> <span class="n">opt</span><span class="o">.</span><span class="n">startswith</span><span class="p">(</span><span class="n">sect</span> <span class="o">+</span> <span class="s1">&#39;_&#39;</span><span class="p">)</span> <span class="k">for</span> <span class="n">sect</span> <span class="ow">in</span> <span class="n">VISUALIZATION_SECTIONS</span><span class="p">]</span> <span class="p">):</span>
+    <span class="k">for</span> <span class="n">opt</span> <span class="ow">in</span> <span class="p">[</span><span class="n">o</span><span class="o">.</span><span class="n">lower</span><span class="p">()</span> <span class="k">for</span> <span class="n">o</span> <span class="ow">in</span> <span class="n">opts</span> <span class="k">if</span> <span class="n">o</span><span class="o">.</span><span class="n">lower</span><span class="p">()</span> <span class="ow">not</span> <span class="ow">in</span> <span class="n">sectioned_opts</span><span class="p">]:</span>
+        <span class="k">if</span> <span class="n">np</span><span class="o">.</span><span class="n">any</span><span class="p">(</span> <span class="p">[</span> <span class="n">opt</span><span class="o">.</span><span class="n">startswith</span><span class="p">(</span><span class="n">sect</span> <span class="o">+</span> <span class="s1">&#39;_&#39;</span><span class="p">)</span> <span class="k">for</span> <span class="n">sect</span> <span class="ow">in</span> <span class="n">section_names</span><span class="p">]</span> <span class="p">):</span>
             <span class="n">warnings</span><span class="o">.</span><span class="n">warn</span><span class="p">(</span><span class="s1">&#39;Option </span><span class="se">\&#39;</span><span class="si">{}</span><span class="se">\&#39;</span><span class="s1">: section-prefix semantics not available in get_visualization_options;&#39;</span><span class="o">.</span><span class="n">format</span><span class="p">(</span><span class="n">opt</span><span class="p">))</span>
             <span class="n">warnings</span><span class="o">.</span><span class="n">warn</span><span class="p">(</span><span class="s1">&#39;use the </span><span class="se">\&#39;</span><span class="s1">section</span><span class="se">\&#39;</span><span class="s1"> parameter instead&#39;</span><span class="p">)</span>
         <span class="k">else</span><span class="p">:</span>
@@ -276,7 +277,7 @@
 <span class="sd">    &quot;&quot;&quot;</span>
     <span class="k">if</span> <span class="n">section</span><span class="o">==</span><span class="s1">&#39;default&#39;</span> <span class="ow">and</span> <span class="s1">&#39;_&#39;</span> <span class="ow">in</span> <span class="n">option</span><span class="p">:</span>
         <span class="n">prefix</span> <span class="o">=</span> <span class="n">option</span><span class="o">.</span><span class="n">split</span><span class="p">(</span><span class="s1">&#39;_&#39;</span><span class="p">)[</span><span class="mi">0</span><span class="p">]</span><span class="o">.</span><span class="n">lower</span><span class="p">()</span>
-        <span class="k">if</span> <span class="n">prefix</span> <span class="ow">in</span> <span class="n">VISUALIZATION_SECTIONS</span><span class="p">:</span>
+        <span class="k">if</span> <span class="n">prefix</span> <span class="ow">in</span> <span class="n">section_names</span><span class="p">:</span>
             <span class="n">section</span><span class="p">,</span> <span class="n">option</span> <span class="o">=</span> <span class="n">prefix</span><span class="p">,</span> <span class="n">option</span><span class="p">[</span><span class="mi">1</span><span class="o">+</span><span class="nb">len</span><span class="p">(</span><span class="n">prefix</span><span class="p">)</span> <span class="p">:</span> <span class="p">]</span>
 
     <span class="k">return</span> <span class="n">get_visualization_options</span><span class="p">([</span><span class="n">option</span><span class="p">],</span><span class="n">section</span><span class="p">,</span><span class="n">overrides</span><span class="p">)[</span><span class="mi">0</span><span class="p">]</span></div>
@@ -285,8 +286,8 @@
 <span class="c1">######################################################################</span>
 <span class="c1"># Definitions of options and section-specific default values</span>
 <span class="c1">#####################################################################</span>
-<span class="sd">&quot;&quot;&quot; names, default values, descriptions of visualization options &quot;&quot;&quot;</span>
-<span class="n">VISUALIZATION_OPTION_TEMPLATES</span><span class="o">=</span> <span class="p">[</span>
+<span class="sd">&quot;&quot;&quot; templates for sectioned visualization options &quot;&quot;&quot;</span>
+<span class="n">sectioned_templates</span> <span class="o">=</span> <span class="p">[</span>
     <span class="n">OptionTemplate</span><span class="p">(</span><span class="s1">&#39;cmap&#39;</span><span class="p">,</span>         <span class="s1">&#39;plasma&#39;</span><span class="p">,</span>        <span class="s1">&#39;default colormap&#39;</span><span class="p">),</span>
     <span class="n">OptionTemplate</span><span class="p">(</span><span class="s1">&#39;alpha&#39;</span><span class="p">,</span>         <span class="mf">1.0</span><span class="p">,</span>            <span class="s1">&#39;default transparency&#39;</span><span class="p">),</span>
     <span class="n">OptionTemplate</span><span class="p">(</span><span class="s1">&#39;fontsize&#39;</span><span class="p">,</span>      <span class="mi">25</span><span class="p">,</span>             <span class="s1">&#39;font size for labels and titles&#39;</span><span class="p">),</span>
@@ -306,14 +307,14 @@
     <span class="n">OptionTemplate</span><span class="p">(</span><span class="s1">&#39;cb_shrink&#39;</span><span class="p">,</span>    <span class="mf">0.60</span><span class="p">,</span>            <span class="s1">&#39;colorbar shrink factor&#39;</span><span class="p">),</span>
     <span class="n">OptionTemplate</span><span class="p">(</span><span class="s1">&#39;latex&#39;</span><span class="p">,</span>        <span class="kc">True</span><span class="p">,</span>            <span class="s1">&#39;LaTeX text formatting&#39;</span><span class="p">),</span>
     <span class="n">OptionTemplate</span><span class="p">(</span><span class="s1">&#39;show&#39;</span><span class="p">,</span>         <span class="kc">True</span><span class="p">,</span>            <span class="s1">&#39;display plots on screen&#39;</span><span class="p">),</span>
- <span class="p">]</span>
+<span class="p">]</span>
 
 <span class="sd">&quot;&quot;&quot;base option names, to which we prepend a prefix like &#39;eps_&#39; to get section-specific options&quot;&quot;&quot;</span>
-<span class="n">VISUALIZATION_OPTIONS</span> <span class="o">=</span> <span class="p">[</span> <span class="n">t</span><span class="o">.</span><span class="n">name</span> <span class="k">for</span> <span class="n">t</span> <span class="ow">in</span> <span class="n">VISUALIZATION_OPTION_TEMPLATES</span> <span class="p">]</span>
+<span class="n">sectioned_opts</span> <span class="o">=</span> <span class="p">[</span> <span class="n">t</span><span class="o">.</span><span class="n">name</span> <span class="k">for</span> <span class="n">t</span> <span class="ow">in</span> <span class="n">sectioned_templates</span> <span class="p">]</span>
 
 
 <span class="sd">&quot;&quot;&quot; section-specific overrides of default option values &quot;&quot;&quot;</span>
-<span class="n">VISUALIZATION_SECTIONS</span> <span class="o">=</span> <span class="p">{</span>
+<span class="n">section_defaults</span> <span class="o">=</span> <span class="p">{</span>
 
     <span class="s1">&#39;default&#39;</span><span class="p">:</span> <span class="p">{},</span>
 
@@ -377,6 +378,12 @@
 <span class="c1">#---------------------------------------------------------------------</span>
     <span class="s1">&#39;mesh&#39;</span><span class="p">:</span> <span class="p">{</span> <span class="s1">&#39;linecolor&#39;</span><span class="p">:</span> <span class="s1">&#39;#ff0000&#39;</span><span class="p">,</span> <span class="s1">&#39;linewidth&#39;</span><span class="p">:</span> <span class="mf">1.0</span> <span class="p">}</span>
 <span class="p">}</span>
+
+<span class="n">section_names</span> <span class="o">=</span> <span class="p">[</span> <span class="n">s</span> <span class="k">for</span> <span class="n">s</span> <span class="ow">in</span> <span class="n">section_defaults</span> <span class="p">]</span>
+
+<span class="n">other_templates</span> <span class="o">=</span> <span class="p">[</span>
+  <span class="n">OptionTemplate</span><span class="p">(</span><span class="s1">&#39;backend&#39;</span><span class="p">,</span>       <span class="s1">&#39;wx&#39;</span><span class="p">,</span>           <span class="s1">&#39;matplotlib backend&#39;</span><span class="p">)</span>
+<span class="p">]</span>
 </pre></div>
 
            </div>
